--- a/atirasang.html
+++ b/atirasang.html
@@ -92,7 +92,7 @@
 
 <div class="plusz">
 <div class="kap-col">
-<form action="uzenetek.php"  method="POST">
+<form action="uzenetek.php"  method="post">
     <input type="text"  name="name" placeholder="Name" required>
     <input type="email" name="email"  placeholder="Email" required>
     <input type="number" name="phone" placeholder="Phone" required>
