--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -59,7 +59,7 @@
 
         <div class="plusz">
         <div class="kap-col">
-        <form action="uzenetek.php"  method="POST">
+        <form action="uzenetek.php"  method="post">
             <input type="text"  name="name" placeholder="Név" required>
             <input type="email" name="email"  placeholder="Email" required>
             <input type="number" name="phone" placeholder="Telefonszám" required>
